--- a/src/app/comun/desarrollador/formObjetosComponent/formObjetos.component.html
+++ b/src/app/comun/desarrollador/formObjetosComponent/formObjetos.component.html
@@ -57,6 +57,11 @@
 					<input matInput formControlName="descripcion">
 				  </mat-form-field>
 
+				  <mat-form-field appearance="legacy" class="formNivel">
+					<mat-label>Nivel</mat-label>
+                    <input matInput type="number" min="1" formControlName="nivel">
+				  </mat-form-field>
+
 			</form>
             </ng-container>
 
