--- a/src/app/comun/desarrollador/formObjetosComponent/formObjetos.component.sass
+++ b/src/app/comun/desarrollador/formObjetosComponent/formObjetos.component.sass
@@ -67,7 +67,11 @@
   .formDescripcion
     left: 30%
     top: 20%
-    width: 60%
+    width: 50%
+  .formNivel
+    right: 5%
+    top: 20%
+    width: 10%
   .formTipoArmadura
     top: 5%
     width: 15%
