--- a/src/app/comun/mazmorra/mazmorra.component.html
+++ b/src/app/comun/mazmorra/mazmorra.component.html
@@ -118,7 +118,7 @@
         <!--     INTERFAZ PANEL         -->
         <!--   ******************* -->
 
-<app-interfaz [renderMazmorra]="renderMazmorra"></app-interfaz>
+        <app-interfaz #interfazComponent [activarInterfaz]="mazmorraService.activarInterfaz"></app-interfaz>
 
         <!--   ******************* -->
         <!--     RNG PANEL         -->
