--- a/src/app/comun/seleccion-personaje/seleccion-personaje.component.html
+++ b/src/app/comun/seleccion-personaje/seleccion-personaje.component.html
@@ -39,7 +39,7 @@
                 </div>
                 <img class="frame" src="assets/Frames/Frame-Heroe-Circulo.png"/>
             </div>
-            <img class="badge" src="assets/Emblemas/{{heroes[1]['badgeId']}}.png"/>
+            <img class="badge" src="assets/Emblemas/{{badge[1]}}.png"/>
         </div>
 
         <div *ngIf="!heroes[1]" class="contenedorCrearHeroe"(click)="mostrarCrearHeroe()">
@@ -63,7 +63,7 @@
                 </div>
                 <img class="frame" src="assets/Frames/Frame-Heroe-Circulo.png"/>
             </div>
-            <img class="badge" src="assets/Emblemas/{{heroes[0]['badgeId']}}.png"/>
+            <img class="badge" src="assets/Emblemas/{{badge[0]}}.png"/>
         </div>
 
         <div *ngIf="!heroes[0]" class="contenedorCrearHeroe"(click)="mostrarCrearHeroe()">
@@ -87,7 +87,7 @@
                 </div>
                 <img class="frame" src="assets/Frames/Frame-Heroe-Circulo.png"/>
             </div>
-            <img class="badge" src="assets/Emblemas/{{heroes[2]['badgeId']}}.png"/>
+            <img class="badge" src="assets/Emblemas/{{badge[2]}}.png"/>
         </div>
 
         <div *ngIf="!heroes[2]" class="contenedorCrearHeroe"(click)="mostrarCrearHeroe()">
