--- a/src/app/comun/tooltip/objetos/objeto.component.sass
+++ b/src/app/comun/tooltip/objetos/objeto.component.sass
@@ -66,6 +66,11 @@
   border-right: 10px solid $colorBorde 
 
 .nombre
+  text-align: center
+
+.efecto
+  text-align: center
+  color: fuchsia
 
 .contenedorEstadisticas
   position: relative
@@ -86,6 +91,7 @@
   position: relative
   height: 2.5em
   display: block
-  margin: 5px auto
+  margin: 10px auto
+
 
   
