Corrección multiples errores

--- a/src/app/comun/desarrollador/dungeonBuilderComponent/dungeonBuilder.component.html
+++ b/src/app/comun/desarrollador/dungeonBuilderComponent/dungeonBuilder.component.html
@@ -233,7 +233,7 @@
             <div *ngFor="let elementoIsometrico of mazmorra.isometrico.MapSave.Placeables.Placeable; let i= index" class="elementoIsometrico" (click)=seleccionarElementoIsometrico(i) [ngStyle]= "renderizarElementoIsometrico(elementoIsometrico)">
                 <img class="imagenElementoIsometrico" src="{{elementoIsometrico.ImagePath}}">
                 <ng-container *ngIf="elementoIsometrico.enemigoId">
-                    <img class="imagenEnemigoIsometrico" src="./assets/Enemigos/gnoll/1.png">
+                    <img class="imagenEnemigoIsometrico" src="./assets/Enemigos/{{elementoIsometrico.pathEnemigo}}">
                 </ng-container>
 
             </div>
