--- a/src/app/comun/inmap/inmap.component.html
+++ b/src/app/comun/inmap/inmap.component.html
@@ -37,7 +37,7 @@
 	<!--        Credito      -->
 	<!--   ******************* -->
 
-	<creditoComponent id="creditoMapa" [gemas]= "100" [monedas]= "200"></creditoComponent>
+	<creditoComponent id="creditoMapa" [gemas]= "0" [monedas]= "0"></creditoComponent>
 
 
 	<!--   ******************* -->
@@ -53,6 +53,12 @@
     <!--
 	<img id="iconoSocial" src="../../../assets/Iconos/Icono-Social.png" (click)="abrirSocial()"/>
     -->
+
+	<!--   ******************* -->
+	<!--      ICONO RELOAD    -->
+	<!--   ******************* -->
+
+  <img id="iconoReload" src="../../../assets/desarrollador/reload.png" (click)="reloadDatos()"/>
 
 	<!--   ******************* -->
 	<!--      Desarrollador    -->
