--- a/src/app/comun/inmap/inmap.component.sass
+++ b/src/app/comun/inmap/inmap.component.sass
@@ -22,6 +22,14 @@
         width: 100%
         height: 100%
 
+#iconoReload
+    position: absolute
+    z-index: 5
+    bottom: 5%
+    right: 30%
+    width: 4%
+    filter: invert(0.7)
+
 #tiempo
   position: absolute
   z-index: 5
